fixed inputs being buffered during wifi wake up sequences, tweaked some strings, modified TODO list.... Welp just have to put a nice bow on it and ship it ! Obenkyobo 0.3.0 lives !

--- a/Src/Pages/AppSettingsPage.ui
+++ b/Src/Pages/AppSettingsPage.ui
@@ -626,7 +626,7 @@
           </sizepolicy>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>2</number>
          </property>
          <item>
           <property name="text">
@@ -640,7 +640,7 @@
          </item>
          <item>
           <property name="text">
-           <string>On (Exc Vocab)</string>
+           <string>On (Except Vocab)</string>
           </property>
          </item>
         </widget>
