modifying WelcomePage to actually resize correctly. It's easier now that I understand qt moonlogic

--- a/Resources/Pictures.qrc
+++ b/Resources/Pictures.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/pictures">
-        <file>QrCode/obenkyoQrCode.png</file>
+        <file>QrCode/github.svg</file>
         <file>lockscreen.jpg</file>
         <file>Arrows/upArrow.png</file>
         <file>Arrows/downArrow.png</file>
