--- a/Src/Pages/VocabExplorerPage.ui
+++ b/Src/Pages/VocabExplorerPage.ui
@@ -10,6 +10,12 @@
     <height>696</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="contextMenuPolicy">
    <enum>Qt::PreventContextMenu</enum>
   </property>
