--- a/Src/Obenkyobo/Src/Widgets/VocabFileEntryWidget.ui
+++ b/Src/Obenkyobo/Src/Widgets/VocabFileEntryWidget.ui
@@ -49,6 +49,15 @@
      <property name="text">
       <string>PushButton</string>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item>
