--- a/Src/Obenkyobo/Src/Pages/VocabExplorerPage.ui
+++ b/Src/Obenkyobo/Src/Pages/VocabExplorerPage.ui
@@ -60,6 +60,12 @@
    </item>
    <item>
     <widget class="QScrollArea" name="VocabularyCfgList">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
@@ -81,11 +87,11 @@
         <x>0</x>
         <y>0</y>
         <width>549</width>
-        <height>643</height>
+        <height>644</height>
        </rect>
       </property>
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
