testing markdown NotePage

--- a/Src/Obenkyobo/Src/Pages/VocabularyDisplayPage.ui
+++ b/Src/Obenkyobo/Src/Pages/VocabularyDisplayPage.ui
@@ -35,7 +35,7 @@
       <number>0</number>
      </property>
      <property name="sizeConstraint">
-      <enum>QLayout::SetFixedSize</enum>
+      <enum>QLayout::SizeConstraint::SetFixedSize</enum>
      </property>
      <item>
       <widget class="QPushButton" name="KanasHidePushButton">
@@ -94,7 +94,7 @@
    <item>
     <layout class="QGridLayout" name="vocabGrid">
      <property name="sizeConstraint">
-      <enum>QLayout::SetDefaultConstraint</enum>
+      <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
      </property>
      <property name="horizontalSpacing">
       <number>0</number>
@@ -110,7 +110,7 @@
       <number>20</number>
      </property>
      <property name="sizeConstraint">
-      <enum>QLayout::SetFixedSize</enum>
+      <enum>QLayout::SizeConstraint::SetFixedSize</enum>
      </property>
      <property name="leftMargin">
       <number>0</number>
