--- a/Src/Obenkyobo/Src/Pages/VocabExplorerPage.ui
+++ b/Src/Obenkyobo/Src/Pages/VocabExplorerPage.ui
@@ -22,7 +22,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_3">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>0</number>
    </property>
