--- a/Src/Obenkyobo/Src/Widgets/VocabFileEntryWidget.ui
+++ b/Src/Obenkyobo/Src/Widgets/VocabFileEntryWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>VocabBaseEntryWidget</class>
- <widget class="QWidget" name="VocabBaseEntryWidget">
+ <class>BaseVocabFileEntryWidget</class>
+ <widget class="QWidget" name="BaseVocabFileEntryWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
