--- a/Src/Obenkyobo/Src/Pages/ExplorerPage.ui
+++ b/Src/Obenkyobo/Src/Pages/ExplorerPage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>VocabExplorerPage</class>
- <widget class="QWidget" name="VocabExplorerPage">
+ <class>ExplorerPage</class>
+ <widget class="QWidget" name="ExplorerPage">
   <property name="geometry">
    <rect>
     <x>0</x>
