--- a/Src/Obenkyobo/Src/Pages/AppSettingsPage.ui
+++ b/Src/Obenkyobo/Src/Pages/AppSettingsPage.ui
@@ -48,7 +48,7 @@
         <string>MCQ Settings :</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignCenter</set>
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -214,7 +214,7 @@
           </size>
          </property>
          <property name="sizeAdjustPolicy">
-          <enum>QComboBox::SizeAdjustPolicy::AdjustToContents</enum>
+          <enum>QComboBox::AdjustToContents</enum>
          </property>
          <item>
           <property name="text">
@@ -235,7 +235,7 @@
    <item>
     <widget class="Line" name="VocabLine">
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
@@ -258,7 +258,7 @@
         <string>Vocabulary Settings :</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignCenter</set>
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -435,7 +435,7 @@
    <item>
     <widget class="Line" name="GlobalSettingsLine">
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
@@ -458,7 +458,7 @@
         <string>Global Settings :</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignCenter</set>
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -571,7 +571,7 @@
           </sizepolicy>
          </property>
          <property name="layoutDirection">
-          <enum>Qt::LayoutDirection::RightToLeft</enum>
+          <enum>Qt::RightToLeft</enum>
          </property>
          <property name="text">
           <string/>
@@ -601,10 +601,13 @@
           </sizepolicy>
          </property>
          <property name="layoutDirection">
-          <enum>Qt::LayoutDirection::RightToLeft</enum>
+          <enum>Qt::RightToLeft</enum>
          </property>
          <property name="text">
           <string/>
+         </property>
+         <property name="tristate">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
